--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="col-md-4" id="footer-col2">
                         <h3>Contact Us</h3>
 
-                        <p>Call Us- <a href="tel:+977-4415837" class="ph">+977-4415837</a>, <a href="+977-9841407705" class="ph">+977-9841407705</a></p>
+                        <p>Call Us- <a href="tel:+977-4415837" class="ph">+977-4415837</a>, <a href="tel:+977-9841407705" class="ph">+977-9841407705</a></p>
                         <p>
                             Viber- <a href="viber://chat?number=9841407705" class="ph">+977-9841407705</a> 
                         </p>
