--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-md-4 social-col">
                     <a href=""><img class="img-responsive rounded mx-auto d-block" src="images/icons8-twitter-64.png"
-                            alt="" /></a>
+                            alt="" target="_blank" /></a>
                 </div>
             </div>
         </div>
