--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="d-grid gap-2 d-md-flex justify-content-center">
             <div class="row align-items-center" id="social-row">
                 <div class="col-md-4 social-col">
-                    <a href="https://www.facebook.com/gpoooooddtiiimmeee/"><img
+                    <a href="https://www.facebook.com/gpoooooddtiiimmeee/" target="_blank" ><img
                             class="img-responsive rounded mx-auto d-block" src="images/logo2.png" alt="" /></a>
                 </div>
                 <div class="col-md-4 social-col">
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-md-4 social-col">
                     <a href=""><img class="img-responsive rounded mx-auto d-block" src="images/icons8-twitter-64.png"
-                            alt="" target="_blank" /></a>
+                            alt=""/></a>
                 </div>
             </div>
         </div>
